--- a/css/price.css
+++ b/css/price.css
@@ -31,20 +31,12 @@ body {
 }
 
 .price__lenta:first-child {
-    border-top: 10px solid;
-    border-right: 10px solid;
-    border-bottom: 10px solid;
-    border-left: 10px solid;
-    border-color: #fff;
+    border: 10px solid #fff;
     border-radius: 50% 50% 0 50%;
-} 
+}
 
 .price__lenta:last-child {
-     border-top: 10px solid;
-    border-right: 10px solid;
-    border-bottom: 10px solid;
-    border-left: 10px solid;
-    border-color: #fff;
+    border: 10px solid #fff;
     border-radius: 50% 50% 50% 0;
 }
 
